<resources>
    <string name="app_name">Oh My Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_app">Chat App</string>
    <string name="reliable_and_fast">Reliable and Fast</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="to_my_chat_app">to my Chat App</string>
    <string name="reset_text">By clicking RESET, you will receive an email to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="lock_image">Lock Image</string>
    <string name="todo">TODO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="name">Name</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="bio">Bio</string>
    <string name="hey_there">Hey there!</string>
    <string name="example_email">example@example.com</string>
    <string name="change_password">Change password</string>
    <string name="empty">Empty</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="_13_08_2021_6_00_sa">13/08/2021 6:00 SA</string>
    <string name="seen">Seen</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="reset_password">Reset password</string>
    <string name="facebook_application_id" translatable="false">306600981259861</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb306600981259861</string>
    <string name="_16_00_sa">16:00 SA</string>
</resources>