<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        app:cnb_iconColor="@color/chats_500"
        app:cnb_iconTintMode="src_in"
        android:title="@string/chats" />
    <item android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        app:cnb_iconColor="@color/search_500"
        app:cnb_iconTintMode="src_in"
        android:title="@string/search" />
    <item android:id="@+id/action_group"
        android:enabled="true"
        android:icon="@drawable/ic_group"
        app:cnb_iconColor="@color/groups_500"
        app:cnb_iconTintMode="src_in"
        android:title="@string/groups" />
    <item android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        app:cnb_iconTintMode="src_in"
        app:cnb_iconColor="@color/profiles_500"
        android:title="@string/profile" />

</menu>