<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="4dp"
    android:paddingVertical="3dp">

    <TextView
        android:id="@+id/message_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_received_message"
        android:gravity="start"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/this_is_a_message"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_sent"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/time_sent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_13_08_2021_6_00_sa"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/seen"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/message_sent"
        app:layout_constraintTop_toBottomOf="@+id/message_sent" />

</androidx.constraintlayout.widget.ConstraintLayout>