<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    app:cardBackgroundColor="@color/chats_200"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/chats_200">

        <FrameLayout
            android:id="@+id/recent_profile_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recent_profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/profile"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/recent_status"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/offline_status"
                android:contentDescription="@string/todo" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/recent_profile_image_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recent_profile_image_layout"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/recent_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textColor="@color/chats_900"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recent_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="4dp"
                    android:text="@string/_16_00_sa"
                    android:textColor="@color/chats_700" />
            </FrameLayout>

            <TextView
                android:id="@+id/recent_mess"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:text="@string/this_is_a_message"
                android:textColor="@color/chats_700"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>